[tool.poetry]
name = "tb1-key-manager"
version = "0.1.0"
description = "Async Key Manager API — diploma project TB1"
authors = ["Ilya Makhanek"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
beanie = "^1.26.0"          # async ODM для MongoDB
motor = "^3.4.0"             # async MongoDB driver
python-jose = {extras = ["cryptography"], version = "^3.3.0"}  # JWT
bcrypt = "^4.1.0"           # хэширование паролей
cryptography = "^42.0.7"    # Fernet шифрование
pydantic-settings = "^2.3.0"  # .env настройки
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"           # async HTTP клиент для тестов
mongomock-motor = "^0.0.21" # мок MongoDB для тестов

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
